--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -13,3 +13,7 @@ $brand-primary:                                   			#ee3a57;
 .navbar-brand {
      font-weight: bold;
 }
+
+.radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"]{
+	margin-left: 0;
+}
