--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <%= link_to "Pixelbrush", root_path, class: "navbar-brand" %>
+    <%= link_to raw("<img src='http://dev-pixelbrush.gotpantheon.com/wp-content/uploads/2014/07/pixelbrush_logo.png'>"), root_path, class: "navbar-brand" %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
