added redirect to login page if not logged in, set up and styled home page droplet table

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,3 +17,7 @@ $brand-primary:                                   			#ee3a57;
 .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"]{
 	margin-left: 0;
 }
+
+.navbar-default .navbar-brand{
+	padding-top: 14px;
+}
