--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,1 +1,36 @@
-<h1>New Dev Site</h1>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <div class="panel-title">
+		<h1>New Dev Site</h1>
+	</div>
+  </div>
+
+<% snapshots = Digitalocean::Image.all({filter: "my_images"}) %>
+<% choices = "<option value=''>Choose One</option>" %>
+<% snapshots.images.each do |snapshot| %>
+	<% choices = choices + "<option value='" + snapshot.id.to_s + "'>" + snapshot.name + "</option>" %>
+<% end %>
+
+<div class="panel-body">
+<%= form_tag({controller: "pages", action: "create"}, method: "post") do %>
+	<div class="form-group">
+	    <%= label_tag :dropletname, "Dev Site Name" %>
+	    <%= text_field_tag :dropletname, nil, class: "form-control" %>
+  	</div>
+
+  	<div class="form-group">
+  		<%= label_tag :snapshot, "Choose A Snapshot" %>
+  		<%= select_tag :snapshot, choices.html_safe, class: "form-control" %>
+  	</div>
+
+  	<div class="form-group">
+  		<%= label_tag :newsite, "Transferring A Site? " %>
+  		<%= check_box_tag :newsite %>
+  	</div>
+  	
+  	<div class="form-group">
+  		<%= submit_tag "Create", class: "btn btn-primary" %>
+  	</div>
+<% end %>
+</div>
+</div>
