added info button. cleaned up some home page styles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,3 +21,7 @@ $brand-primary:                                   			#ee3a57;
 .navbar-default .navbar-brand{
 	padding-top: 14px;
 }
+
+table.home{
+	margin-bottom: 35px;
+}
